Chart axis fixes, CSS tweaks around chart and various z-index elements.

--- a/src/core.css
+++ b/src/core.css
@@ -37,6 +37,7 @@ html #toolbar {
   top: 1em;
   width: 3em;
   pointer-events: none;
+  z-index: 190;
 }
 
 html #toolbar button {
