--- a/src/markdown/code-block/code-block.css
+++ b/src/markdown/code-block/code-block.css
@@ -153,7 +153,7 @@
   border-bottom: none;
 
   position: sticky;
-  top: 0;
+  top: -0.6em;
 }
 
 #contentHost .milkdown .ProseMirror .code_block .code_block_backtick_language::before {
@@ -187,6 +187,7 @@
   max-height: 80vh;
   overflow: auto;
   transition: transform 300ms;
+  z-index: 100;
 }
 
 .completions-menu {
