--- a/src/markdown/code-block/state/runtime/view/chart/create-chart.css
+++ b/src/markdown/code-block/state/runtime/view/chart/create-chart.css
@@ -2,16 +2,23 @@
   display: block;
   position: relative;
   padding-left: 3em;
+  padding-right: 0.5em;
+  padding-top: 0.3em;
 }
 
 .chart-view-panel-outer-wrapper {
   position: relative;
-  height: 215px;
+  height: 265px;
 }
 
 .chart-view-panel-inner-wrapper {
-  position: absolute;
-  left: 0; top: 0;
-  width: 100%; height: 100%;
-  background: white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    border: solid 1px #d0cfcf;
+    border-radius: 0.25em;
+    box-shadow: inset 1px 1px 4px #0000002e;
 }
